--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@ The main objective of the KGiSL Institute of Technology is to provide </br>
 </br> industry embedded education and to mold the students for leadership in industry,</br> government, and educational institutions; to advance the knowledge </br> base of the engineering professions; and to influence the future directions </br> of engineering education and practice.
 This was the reason for me to choose this college.</br>I'm very blessed to be the student of this college.</font></p>
 
-</font></i></p>
+</font>
+</i></p>
 </body>
 </head>
 </html>
